se configuran endpoints y arreglos varios