@@ -1,6 +1,7 @@
 package com.um.prog2.dataservice.service;
 
 import com.um.prog2.dataservice.entity.Inventario;
+import com.um.prog2.dataservice.exception.ResourceNotFoundException;
 import com.um.prog2.dataservice.repository.InventarioRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,7 +9,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -25,53 +26,49 @@ class InventarioServiceTest {
     private InventarioService inventarioService;
 
     @Test
-    void cuandoFindAll_entoncesRetornaListaDeInventarios() {
+    void findAll_debeRetornarListaDeInventario() {
         // Arrange
-        Inventario inventario1 = new Inventario();
-        inventario1.setId(1L);
-        Inventario inventario2 = new Inventario();
-        inventario2.setId(2L);
-        List<Inventario> listaEsperada = Arrays.asList(inventario1, inventario2);
-
-        when(inventarioRepository.findAll()).thenReturn(listaEsperada);
+        Inventario inventario = new Inventario();
+        inventario.setId(1L);
+        inventario.setCantidad(100);
+        when(inventarioRepository.findAll()).thenReturn(List.of(inventario));
 
         // Act
         List<Inventario> resultado = inventarioService.findAll();
 
         // Assert
         assertNotNull(resultado);
-        assertEquals(2, resultado.size());
-        verify(inventarioRepository, times(1)).findAll();
+        assertEquals(1, resultado.size());
+        assertEquals(100, resultado.get(0).getCantidad());
+        verify(inventarioRepository).findAll();
     }
 
     @Test
-    void cuandoFindByIdExistente_entoncesRetornaInventario() {
+    void findById_cuandoInventarioExiste_debeRetornarInventario() {
         // Arrange
         Inventario inventario = new Inventario();
         inventario.setId(1L);
-        inventario.setCantidad(100);
-
         when(inventarioRepository.findById(1L)).thenReturn(Optional.of(inventario));
 
         // Act
-        Optional<Inventario> resultado = inventarioService.findById(1L);
+        Inventario resultado = inventarioService.findById(1L);
 
         // Assert
-        assertTrue(resultado.isPresent());
-        assertEquals(100, resultado.get().getCantidad());
-        verify(inventarioRepository, times(1)).findById(1L);
+        assertNotNull(resultado);
+        assertEquals(1L, resultado.getId());
+        verify(inventarioRepository).findById(1L);
     }
 
     @Test
-    void cuandoFindByIdNoExistente_entoncesRetornaOptionalVacio() {
+    void findById_cuandoInventarioNoExiste_debeLanzarResourceNotFoundException() {
         // Arrange
-        when(inventarioRepository.findById(99L)).thenReturn(Optional.empty());
+        when(inventarioRepository.findById(1L)).thenReturn(Optional.empty());
 
-        // Act
-        Optional<Inventario> resultado = inventarioService.findById(99L);
+        // Act & Assert
+        assertThrows(ResourceNotFoundException.class, () -> {
+            inventarioService.findById(1L);
+        });
 
-        // Assert
-        assertFalse(resultado.isPresent());
-        verify(inventarioRepository, times(1)).findById(99L);
+        verify(inventarioRepository).findById(1L);
     }
 }
